# effective-cpp

./: CMakeLists.txt  README.md  algorithm.cpp  algorithm.h  algorithm_struct.cpp  algorithm_struct.h  algorithm_test.cpp  base64.cpp  base64.h  class.cpp  class.h  class_test.cpp  const.cpp  const.h  main.cpp  memory.cpp  memory.h  variant.h
googletest-release-1.11.0/: PACKAGE.vcxproj  PACKAGE.vcxproj.filters
googletest-release-1.11.0/googlemock/: PACKAGE.vcxproj  PACKAGE.vcxproj.filters
googletest-release-1.11.0/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
